deployments/proxitok/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxitok-ingress
  namespace: proxitok
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: tok.thekitty.zone
    external-dns.alpha.kubernetes.io/ttl: "3600" #optional
    
spec:
  rules:
    - host: tok.thekitty.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxitok
                port:
                  number: 80
  tls:
    - secretName: proxitok-tls
      hosts:
        - tok.thekitty.zone
